Fix : work섹션 필터링 요소 모달창 내부 표시 기능 js 완료
* 수정 사항

필터링 버튼을 눌러 썸네일 이미지와 오리지널 이미지가 일치하는 data-type에 맞게 필터링되어 표시됩니다.

표시되는 이미지에는 invisible 클래스가 들어가지 않았으므로 해당 클래스가 없는 요소들을 불러와 모달창 내부에 표시되도록 코드를 작성하였습니다.

그 후 각 요소에 data-index값을 주어 썸네일을 클릭하면 해당 인덱스 값에 맞는 오리지널 이미지가 표시됩니다.

전체 카테고리 외의 카테고리는 요소가 2개뿐이므로 data-index값이 3이상인 요소들은 홀짝을 구분하여 표시하도록 코드를 작성하였습니다.
그렇게 되면 모달창 내부에서 필터링된 요소들끼리만 슬라이드할 수 있습니다.

* 기타

썸네일을 클릭하여 모달창이 오픈되었을때만 오리지널 이미지가 표시되야하므로 썸네일 이미지가 클릭되지 않을 경우에 페이지 로드시 오리지널 이미지가 표시 되지 않는 현상은 그대로 두었습니다.

--- a/assets/style.css
+++ b/assets/style.css
@@ -825,7 +825,7 @@ p {
 
 .project_preview.invisible,
 .slide_box.invisible {
-  display: none;
+  display: none !important;
 }
 
 .preview_img {
@@ -844,6 +844,11 @@ p {
   top: 0; left: 0;
   transform: translateY(10px);
   transition: all var(--animation-duration) ease-in;
+}
+
+.project__more i {
+  font-size: var(--font-large);
+  pointer-events: none;
 }
 
 .project_preview:hover .project__more{
